--- a/css/style.css
+++ b/css/style.css
@@ -59,11 +59,12 @@ main {
 }
 
 .project-list {
-    background-color: rgb(227, 230, 213);
+    background-color: rgb(228, 186, 165);
     padding: 20px;
     margin-bottom: 115px;
     width: 100%;
     height: 300px;
+    border: 5px solid whitesmoke;
 }
 
 article {
